Change Java Launch option to try to optimize game performances